# bindlang

./: .gitignore  LICENSE  README.md  pyproject.toml
bindlang/: __init__.py
bindlang/core/: __init__.py  audit_manager.py  checkers.py  composition.py  engine.py  export.py  export_manager.py  models.py  orchestration.py  sinks.py  state.py  streaming_manager.py  template_manager.py  templates.py
docs/: ARCHITECTURE.md
docs/diagrams/: advanced-patterns.md  core-architecture.md  template-system.md
docs/examples/: EXAMPLES.md  stress-testing.md
docs/guides/: multi-actor-orchestration.md  state-mutations.md  when-to-use-what.md
docs/reference/: audit-trail.md  debugging.md  engine.md  index.md  installation.md  models.md  orchestration.md  patterns.md  quickstart.md  serialization.md  templates.md
docs/theory/: FOUNDATION.md
examples/: template_use_cases.py
examples/custom_sinks/: README.md  inmemory_sink.py  multiplex_sink.py  sqlite_sink.py
tests/: __init__.py  test_composition.py  test_dependency_semantics.py  test_state_mutations.py  test_temporal_latent.py
