[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bindlang"
version = "0.1.0"
description = "Deferred semantic binding framework for Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "bindlang contributors"}
]
keywords = ["semantic", "binding", "latent", "context", "gates", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://bindlang.dev"
Repository = "https://github.com/bindlang/bindlang"
Documentation = "https://bindlang.dev"

[tool.setuptools]
packages = ["bindlang", "bindlang.core"]
